--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,14 @@
         <item>5</item>
         <item>6</item>
     </string-array>
+
+<!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="send">Enviar</string>
+    <string name="abc_text">Feedback - vote por esta app</string>
+    <string name="count_element">Cuenta Total</string>
+    <string name="abc_setting_element">Iniciar Stage</string>
+    <string name="name_stage">Nombre del Stage</string>
+    <string name="select_theme">Seleccionar Thema</string>
+    <string name="title_activity_init_stage">InitStage</string>
 </resources>
